# mlfcs-gapa

./: .gitignore  README.md  automation_state.md  diag_microstructure.py  diag_reward.py  diag_simulator.py  ghali_report.md  main.py  paper_replication.ipynb  progress_report.md  pyproject.toml  pyrallis.py
cluster/: AGENTS.md  README.md  collect_piroth2_pretrain_comparison.py  euler_common.sh  euler_evaluate.sbatch  euler_lobmmsim_calibration.sbatch  euler_lobmmsim_matrix.sbatch  euler_piroth2_diagnostics.sbatch  euler_piroth2_evaluate.sbatch  euler_piroth2_pretrain.sbatch  euler_piroth2_pretrain_threshold_scan.sbatch  euler_piroth2_report.sbatch  euler_piroth2_suite.sbatch  euler_piroth2_train_dqn.sbatch  euler_piroth2_train_ppo.sbatch  euler_piroth_sweep.sbatch  euler_pretrain.sbatch  euler_report.sbatch  euler_run.py  euler_run_lobmmsim.py  euler_run_lobmmx.py  euler_run_piroth.py  euler_run_piroth2.py  euler_suite.sbatch  (+29 more)
simulation/: diag_label_dist.py  pyproject.toml
simulation/anja_simulations/: config.py  data.py  diagnostics.py  env.py  features.py  models.py  pretrain.py  report.py  rl.py  run_suite.py  simulator.py  sweep.py  system_summary.md  utils.py
simulation/cluster/: diag_features.sbatch  diag_label.sbatch  euler_anja_suite.sbatch  euler_common.sh  euler_piroth_suite.sbatch  euler_run_anja_simulations.py  ghali_calibrated_full.sbatch  ghali_full.sbatch  ghali_medium.sbatch  ghali_smoke.sbatch  partial_analysis_anja.py  plot_lob_diagnostics.py  submit_anja_suite.sh  submit_piroth_suite.sh
simulation/piroth/: config.py  data.py  env.py  features.py  models.py  pretrain.py  report.py  simulator.py
simulation/tests/: test_piroth_baselines.py  test_piroth_simulator.py  test_piroth_smoke.py
(+225 files in other folders)
