[project]
name = "mlfcs-gapa"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "datasets>=4.8.5",
    "gymnasium>=1.2.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.5",
    "pandas>=3.0.3",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "ruff>=0.15.13",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "stable-baselines3>=2.8.0",
    "tensorboard>=2.20.0",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
    "typer>=0.25.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mlfcs_gapa"]

[project.scripts]
mlfcs-gapa = "mlfcs_gapa.cli:app"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
